Fixed clipping issue with Rising Phoenix title (v2)

--- a/css/cj_css.css
+++ b/css/cj_css.css
@@ -109,7 +109,7 @@
       float:left;
       z-index:-1;
       width:100%;
-      height:75%;
+      /*height:75%;*/
   }
   
   #featheader{
